--- a/service-consumer-demo/src/main/resources/bootstrap.yml
+++ b/service-consumer-demo/src/main/resources/bootstrap.yml
@@ -7,6 +7,12 @@ spring:
     nacos:
       discovery:
         server-addr: 47.113.101.241:8848
+      config:
+        namespace: f3533721-4b21-4ef0-a373-e78b71f639c7
+        server-addr: 47.113.101.241:8848
+        group: DEFAULT_GROUP
+        file-extension: yml
+        refresh-enabled: true
 
 management:
   endpoints:
