微服务 进行feign调用 完成 修改README文件

--- a/service-provider-demo-feign/src/main/resources/bootstrap.yml
+++ b/service-provider-demo-feign/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 9994
 spring:
   application:
-    name: nacos-provider
+    name: nacos-provider-feign
   cloud:
     nacos:
       discovery:
