--- a/service-consumer-demo/src/main/resources/bootstrap.yml
+++ b/service-consumer-demo/src/main/resources/bootstrap.yml
@@ -19,3 +19,11 @@ management:
     web:
       exposure:
         include: "*"
+
+  datasource:
+    username: root
+    password: Hsj123456
+    url: jdbc:mysql://47.115.38.181:3306/hsj_security?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+    driverClassName: com.mysql.jdbc.Driver
+mybatis:
+  mapper-locations: classpath:mapper/*/*.xml, classpath:mapper/*.xml
