--- a/service-provider-demo-other/src/main/resources/bootstrap.yml
+++ b/service-provider-demo-other/src/main/resources/bootstrap.yml
@@ -12,6 +12,13 @@ spring:
         server-addr: 47.113.101.241:8848
         group: DEFAULT_GROUP
         file-extension: yml
+  datasource:
+    username: root
+    password: Hsj123456
+    url: jdbc:mysql://47.115.38.181:3306/db_order?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+    driverClassName: com.mysql.jdbc.Driver
+mybatis:
+  mapper-locations: classpath:mapper/*/*.xml, classpath:mapper/*.xml
 
 management:
   endpoints:
