--- a/service-provider-demo-other/pom.xml
+++ b/service-provider-demo-other/pom.xml
@@ -109,7 +109,7 @@
 		<!-- Mybatis 驱动包 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid-spring-boot-starter</artifactId>
+			<artifactId>druid</artifactId>
 			<version>1.1.6</version>
 		</dependency>
 		<!--        seata分布式事务-->
