新增 seata At 模式 分布式事务 测试

--- a/service-consumer-demo/pom.xml
+++ b/service-consumer-demo/pom.xml
@@ -103,6 +103,13 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!--        引入storage 入口包feign-->
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>service-storage-demo-feign</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- Mysql 驱动包 -->
         <dependency>
@@ -123,16 +130,17 @@
             <version>1.1.6</version>
         </dependency>
 <!--        seata分布式事务-->
-        <dependency>
-            <groupId>io.seata</groupId>
-            <artifactId>seata-spring-boot-starter</artifactId>
-            <version>1.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.seata</groupId>
-            <artifactId>seata-all</artifactId>
-            <version>1.4.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.seata</groupId>-->
+<!--            <artifactId>seata-spring-boot-starter</artifactId>-->
+<!--            <version>1.4.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.seata</groupId>-->
+<!--            <artifactId>seata-all</artifactId>-->
+<!--            <version>1.4.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
     <build>
         <plugins>
