新增 seata At 模式 分布式事务 测试

--- a/service-provider-demo-feign/src/main/resources/bootstrap.yml
+++ b/service-provider-demo-feign/src/main/resources/bootstrap.yml
@@ -1,20 +1,20 @@
-server:
-  port: 9994
-spring:
-  application:
-    name: nacos-provider-feign
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 47.113.101.241:8848
-      config:
-        namespace: f3533721-4b21-4ef0-a373-e78b71f639c7
-        server-addr: 47.113.101.241:8848
-        group: DEFAULT_GROUP
-        file-extension: yml
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+#server:
+#  port: 9994
+#spring:
+#  application:
+#    name: nacos-provider-feign
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 47.113.101.241:8848
+#      config:
+#        namespace: f3533721-4b21-4ef0-a373-e78b71f639c7
+#        server-addr: 47.113.101.241:8848
+#        group: DEFAULT_GROUP
+#        file-extension: yml
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
