--- a/service-provider-demo-other/src/main/resources/bootstrap.yml
+++ b/service-provider-demo-other/src/main/resources/bootstrap.yml
@@ -30,47 +30,6 @@ seata:
   enabled: true
   application-id: nacos-provider
   tx-service-group: my_test_tx_group
-
-  client:
-    rm:
-      async-commit-buffer-limit: 1000
-      report-retry-count: 5
-      table-meta-check-enable: false
-      report-success-enable: false
-      lock:
-        retry-interval: 10
-        retry-times: 30
-        retry-policy-branch-rollback-on-conflict: true
-    tm:
-      commit-retry-count: 5
-      rollback-retry-count: 5
-    undo:
-      data-validation: true
-      log-serialization: jackson
-      log-table: undo_log
-    log:
-      exceptionRate: 100
-
-  transport:
-    shutdown:
-      wait: 3
-    thread-factory:
-      boss-thread-prefix: NettyBoss
-      worker-thread-prefix: NettyServerNIOWorker
-      server-executor-thread-prefix: NettyServerBizHandler
-      share-boss-worker: false
-      client-selector-thread-prefix: NettyClientSelector
-      client-selector-thread-size: 1
-      client-worker-thread-prefix: NettyClientWorkerThread
-      worker-thread-size: default
-      boss-thread-size: 1
-    type: TCP
-    server: NIO
-    heartbeat: true
-    serialization: seata
-    compressor: none
-    enable-client-batch-send-request: true
-
   service:
     vgroup-mapping:
       my_test_tx_group: default
@@ -78,14 +37,21 @@ seata:
       default: 127.0.0.1:8091
 
   config:
-    #    type: file
-    nacos:
-      namespace:
-      serverAddr: localhost
-      group: SEATA_GROUP
+    type: file
+  #    type: nacos
+  #    nacos:
+  #      namespace:
+  #      serverAddr: 47.113.101.241:8848
+  #      group: SEATA_GROUP
+  #      username: nacos
+  #      password: nacos
 
   registry:
-    #    type: file
-    nacos:
-      cluster: default
-      server-addr: localhost
+    type: file
+#    type: nacos
+#    nacos:
+#      server-addr: 47.113.101.241:8848
+#      group: SEATA_GROUP
+#      cluster: default
+#      username: naocs
+#      password: naocs      server-addr: localhost
